invisible button fix!

--- a/planetplum/static/css/base1.1.css
+++ b/planetplum/static/css/base1.1.css
@@ -1,9 +1,16 @@
 /* general rules */
 html {
     color-scheme: light dark;
+    --textcolor: black;
     --textcolor: light-dark(black, white);
     font-size: 3.2vw;
     font-family: sans-serif, "Helvetica Neue", "Lucida Grande", Arial;
+}
+
+@media (prefers-color-scheme: dark){
+    html {
+        --textcolor: white;
+    }
 }
 
 div {
